--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,9 @@ on:
   workflow_call:
   workflow_dispatch:
 
+env:
+  PYTHON_VERSION: "3.13"
+
 jobs:
   changes:
     name: Identify changes
@@ -44,7 +47,7 @@ jobs:
       - name: Run black action
         uses: ./
         with:
-          python_version: "3.13"
+          python_version: ${{ env.PYTHON_VERSION }}
           working_directory: tests
 
   result:
