--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
           paths: |
             - .github/workflows/tests.yml
             - action.yml
-            - tests/*
+            - tests/**
 
   test-black:
     name: Test black
