--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -76,7 +76,7 @@ jobs:
     if: always()
     needs:
       - prettier
-      - tests-black
+      - test-black
     steps:
       - name: CI failed
         if: contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
